removed runtime.js script and webpack optimization config

--- a/public/index.html
+++ b/public/index.html
@@ -4,11 +4,10 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta http-equiv="x-ua-compatible" content="ie=edge">
-  <script type="text/javascript" src="/static/runtime.js"></script>
-  <script type="text/javascript" src="/static/client.js" defer></script>
   <script type="text/javascript">window.__STATE__ = {};</script>
   <link rel="stylesheet" type="text/css" href="/static/client.css" />
 </head>
 <body>
   <div id="root"></div>
+  <script type="text/javascript" src="/static/client.js"></script>
 </body>
