--- a/public/index.html
+++ b/public/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
   <div id="root"></div>
+  <script type="text/javascript" src="/static/runtime.js"></script>
   <script type="text/javascript" src="/static/client.js"></script>
 </body>
